fix(App): loading class z-index changed

--- a/src/components/general/LoaderFullScreenComponent/LoaderFullScreenComponent.css
+++ b/src/components/general/LoaderFullScreenComponent/LoaderFullScreenComponent.css
@@ -1,7 +1,7 @@
 /* Absolute Center Spinner */
 .loading {
     position: fixed;
-    z-index: 1032;
+    z-index: 1057;
     height: 2em;
     width: 2em;
     overflow: show;
